# Movinyl

./: .dockerignore  .gitignore  0_Setup  1_BATCH  1_IMAGE_GENERATOR  2_MAKE_PAGE  2_VIDEO_REMOVER  3_BATCH_LAUNCH  3_assist  4_RENAME_SAVE  5_MAKE_PAGE  6_BATCH  BATCH_LAUNCH  CONTAINER_README.md  Circlatron3000.py  Dockerfile  IMAGE_GENERATOR  LICENSE  Makefile  README.md  color_kmeans.py  color_picker.py  disk  disk.cpp  docker-compose.yml  docker-entrypoint.sh  env.example  generate_infos.py  interface.py  movinyl.py  multithread attempt.cpp  page  page.cpp  planche.py  pyproject.toml  requirements.txt  run.sh  run_interface.py  test.sh  utils.py
INFOS/: 12_Angry_Men_1957.txt  2010_The_Year_We_Make_Contact_1984.txt  A_Bugs_Life_1998.txt  A_Clockwork_Orange_1971.txt  Alien_1978.txt  Alien_3_1992.txt  Aliens_1986.txt  Amelie_2001.txt  American_History_X_1998.txt  American_Ultra_2015 copie.txt  American_Ultra_2015.txt  Apocalypse_Now_1979.txt  Apollo_13_1995.txt  Arrival_2016.txt  Avatar_2009.txt  Avengers_Infinity_War_2018.txt  Back_to_the_Future_1985.txt  Back_to_the_Future_Part_II_1989.txt  Big_Hero_6_2014.txt  Blade_Runner_1982.txt  Blade_Runner_2049_2017.txt  Cars_2006.txt  Cars_3_2017.txt  Cinema_Paradiso_1988.txt  Contact_1997.txt  Dawn_of_the_Planet_of_the_Apes_2014.txt  Deadpool_2_2018.txt  Deepwater_Horizon_2016.txt  Delicatessen_1991.txt  District_9_2009.txt  Django_Unchained_2012.txt  Dune_1984.txt  Enter_the_Void_2009.txt  Eternal_Sunshine_of_the_Spotless_Mind_2004.txt  Everest_2015.txt  Fantasia_2000_1999.txt  Fight_Club_1999.txt  Forrest_Gump_1994.txt  Frozen_2013.txt  Full_Metal_Jacket_1987.txt  (+80 more)
SCRIPTS/: COLOR_PROFILES  GENERATE  MAKE_ALL
movinyl/: __init__.py  __main__.py  bootstrap.py  cli.py  engine.py  infos.py  palette.py  planche.py  platforminfo.py  progress.py  tui.py
reference/: encyclopedia.txt
scripts/: setup.ps1  setup.sh
src/: CMakeLists.txt
src/disk/: Makefile  disk.cpp  progressbar.hpp
src/disk_mono/: Makefile  disk_mono.cpp
src/page/: Makefile  page.cpp
src/perf_test/: Makefile  perf_test.cpp
src/pymdb/: setup.py
src/pymdb/pymdb/: __init__.py  pymdb.py
